# SpectacularAI

./: CMakeLists.txt  conanfile.py  package.xml
.github/workflows/: conan-package.yml
include/: cam_params.h  sharedmemtool.hpp
src/: cam_params.cpp  main.cpp  sharedmemtool.cpp
